css/style.css
/* ... */
@media (max-width: 1023.98px) {
  .gallery {
    margin-bottom: 11.33vw;
  }
  
  .gallery .text h3 {
    margin-bottom: 6.66vw;
  }
  
  .gallery .swiper-navigation {
    bottom: 14vw;
  }
  
  .gallery .swiper-pagination {
    padding: 0 8.66vw;
  }
  
  .gallery .swiper-navigation img {
    width: 4.26vw;
  }
  
  .gallery .swiper-pagination-bullet {
    width: 2.21vw;
    height: 2.21vw;
    margin-left: 2.21vw;
    flex: 0 0 2.21vw;
    margin: 0 .8vw!important;
  }

  .gallery .slide-text {
    padding: 2.4vw 4.53vw;
  }

  .gallery .img h3 {
    position: absolute;
    left: 0;
    bottom: 0;
    padding: 2.4vw 4.53vw;
    z-index: 20;
    background-color: white;
  }
}

/* #Company
================================================== */
.company {
  text-align: center;
  margin-bottom: 5.2vw;
}

.company.boxed {
  padding: 4.4vw 0;
  position: relative;
}

.company.boxed::after {
  content: '';
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 90%;
  height: 100%;
  background-color: #FAF9F6;
  z-index: -1;
}

.company .container {
  width: 64%;
}

.company .img,
.company .img img,
.company .img picture {
  width: 100%;
}

.company .text {
  margin: 0 auto 2.6vw auto;
  width: 45.42vw;
}

.company .logo {
  margin-bottom: 2vw;
}

.company .logo img {
  height: 4.5vw;
  margin: 0 auto;
}

.company h3 {
  margin-bottom: 1vw;
}

@media (max-width: 1023.98px) {
  .company {
    margin-bottom: 8vw;
  }
  
  .company.boxed {
    padding: 4.4vw 0;
  }
  
  .company.boxed::after {
    display: none;
  }
  
  .company .container {
    width: 90%;
  }
  
  .company .text {
    margin: 0 auto 10vw auto;
    width: 100%;
  }
  
  .company .logo {
    margin-bottom: 5.33vw;
  }
  
  .company .logo img {
    height: 12vw;
  }
  
  .company h3 {
    margin-bottom: 3vw;
  }
}

/* #Contact
================================================== */
.contact {
  position: relative;
  margin-top: 6.77vw;
}

.contact .img,
.contact .img img,
.contact .img picture {
  width: 100%;
}

.contact .container {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  background-color: rgba(0,0,0,.58);
  padding: 1.5vw;
  width: 61.35%;
  height: 43.7vw;
}

.contact .box {
  border: 1px solid white;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  height: 100%;
  color: white;
}

.contact .logo {
  margin-bottom: 1.5vw;
}

.contact .logo img {
  width: 11vw;
}

.contact h2 {
  margin-bottom: 1.5vw;
}

.contact h3 {
  margin-bottom: 3.125vw;
}

.contact p,
.contact form {
  width: 44.8vw;
}

.contact p {
  margin-bottom: 2.5vw;
}

.contact .row {
  display: flex;
  margin-bottom: 1.5vw;
}

.contact .row:last-child {
  margin-bottom: 0;
  margin-top: 3.125vw;
}

.contact .row .col {
  flex: 0 0 50%;
}

.contact .row .col:first-child {
  padding-left: 1.5vw;
}

.contact .row .col:last-child {
  padding-right: 1.5vw;
}

.contact .row input[type="text"],
.contact .row input[type="text"]::placeholder {
  background-color: transparent;
  border: none;
  border-bottom: 1px solid white;
  color: white;
  width: 100%;
  padding-bottom: .75vw;
}

.contact .btn {
  margin: 0 auto;
}

@media (max-width: 1023.98px) {
  .contact {
    margin-top: 12vw;
  }
  
  .contact .container {
    top: 0;
    left: 0;
    transform: none;
    padding: 5vw;
    width: 100%;
    height: 100%;
  }

  .contact .logo {
    margin-bottom: 4vw;
  }
  
  .contact .logo img {
    width: 28.4vw;
  }
  
  .contact h2 {
    margin-bottom: 4vw;
  }
  
  .contact h3 {
    margin-bottom: 6.66vw;
  }
  
  .contact p,
  .contact form {
    width: 70vw;
  }
  
  .contact p {
    margin-bottom: 8vw;
  }
  
  .contact .row {
    display: flex;
    flex-direction: column;
    margin-bottom: 5.33vw;
  }
  
  .contact .row:last-child {
    margin-top: 8.66vw;
  }
  
  .contact .row .col:first-child {
    padding-left: 0;
    margin-bottom: 5.33vw;
  }
  
  .contact .row .col:last-child {
    padding-right: 0;
  }
  
  .contact .row input[type="text"],
  .contact .row input[type="text"]::placeholder {
    padding-bottom: 2vw;
  }
}

/* #Footer
================================================== */
.footer {
  padding: 6vw 0 4.65vw 0;
}

.footer .logos {
  display: flex;
  align-items: center;
  justify-content: center;
  margin-bottom: 1.5vw;
}

.footer .logos a:not(:last-child) {
  margin-left: 2vw;
}

.footer .logos img {
  height: 3.65vw;
}

.footer .links ul {
  background-color: #FAF9F6;
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: .75vw 2.9vw;
}

.footer .text {
  margin: 0 auto;
  width: 45%;
  text-align: center;
  padding: 1vw 0;
}

@media (max-width: 1023.98px) {
  .footer {
    padding: 7.73vw 0 13vw 0;
  }
  
  .footer .logos {
    margin-bottom: 7.73vw;
  }
  
  .footer .logos a:not(:last-child) {
    margin-left: 7.73vw;
  }
  
  .footer .logos img {
    height: 10vw;
  }
  
  .footer .links ul {
    flex-wrap: wrap;
    justify-content: center;
    padding: 2vw 3.33vw;
  }

  .footer .links li:first-child {
    margin-left: auto;
  }
  
  .footer .links li:last-child {
    margin-top: 1vw;
  }
  
  .footer .text {
    width: 90%;
    padding: 5vw 0;
  }
}

/* #Contact Bar
================================================== */
.contact-bar {
  position: fixed;
  z-index: 20000;
  left: 0;
  bottom: 0;
  width: 100%;
  background-color: #B61E25;
  color: white;
  padding: .36vw 0;
}

.contact-bar form p {
  margin-left: 1.3vw;
}

.contact-bar input {
  background-color: transparent;
  border: 1px solid white;
  color: white;
  height: 1.875vw;
  padding-right: .75vw;
  margin-left: 1.5vw;
  width: 10vw;
}

.contact-bar input::placeholder {
  color: white;
}
/* ... */

